# agonai

./: .dockerignore  .env.example  .gitignore  .prettierignore  Anchor.toml  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  tailwind.config.d.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish-docker.yml
.playwright-mcp/: KCFMCPDMLCHHBIKBOGDDMGOPMJBFLNAE-0-10-80-0.crx
bots/: README.md  package.json  tsconfig.json
bots/src/: claude-bot.ts  server.ts
docker/openclaw-bot/: Dockerfile  Dockerfile.complete  README.md  docker-compose.complete.yml  docker-compose.yml  entrypoint.sh  start.sh
docs/: NAME-IDEAS.md  PLAN.md  bot-api.yaml  bot-integration.md  cli.md  docker.md  index.md  package.json  protocol.md
docs/.vitepress/: config.ts
docs/guide/: docker.md  index.md  protocol.md  web-app.md
programs/ai-debates/: Cargo.toml
programs/ai-debates/src/: lib.rs
scripts/: serve-docs.ts
server/: package.json  tsconfig.json
server/src/: index.ts
src/: App.tsx  index.css  main.tsx
src/api/: Dockerfile  drizzle.config.ts  index.ts  package.json  tsconfig.json
src/bot/: README.md  chatgpt-bot.ts  claude-bot.ts  openclaw-bot.ts  package.json  server.ts  tsconfig.json
src/cli/: Dockerfile  example-spec.md  index.ts  package.json
src/components/: Layout.tsx  WalletButton.tsx
src/hooks/: index.ts  useBalance.ts  useUser.ts  useWallet.tsx
src/lib/: api.ts  elo.test.ts  utils.ts
src/routes/: Arena.tsx  (+7 more)
(+167 files in other folders)
