[package]
name = "ai-debates"
version = "0.1.0"
description = "AI Debates Arena - On-chain debate tracking, voting, and rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_debates"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
